# minique

./: .gitignore  CMakeLists.txt  README.md
build-native/: Makefile
build-wasm/: Makefile
docs/: index.html  script.js  style.css
examples/: test.mq
include/: ast.h  codegen.h  lexer.h  parser.h
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp  wasm_interpreter.cpp  wasm_wrapper.cpp
